--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ notebook_shim==0.2.4
 numpy==2.2.0
 oauth2client==4.1.3
 oauthlib==3.2.2
+openai==1.58.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
